--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,17 @@
         <dependency>
             <groupId>org.whispersystems</groupId>
             <artifactId>gcm-sender-async</artifactId>
-            <version>0.1.4</version>
+            <version>0.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nurkiewicz.asyncretry</groupId>
+            <artifactId>asyncretry-jdk7</artifactId>
+            <version>0.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.0.2</version>
         </dependency>
 
         <dependency>
@@ -144,7 +154,6 @@
             <scope>test</scope>
         </dependency>
 
-
     </dependencies>
 
     <dependencyManagement>
@@ -159,7 +168,16 @@
                 <artifactId>httpcore</artifactId>
                 <version>4.4.1</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpasyncclient</artifactId>
+                <version>4.0.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nurkiewicz.asyncretry</groupId>
+                <artifactId>asyncretry-jdk7</artifactId>
+                <version>0.0.5</version>
+            </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
@@ -264,14 +282,27 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <configuration>
+                            <groupId>org.whispersystems</groupId>
+                            <artifactId>gcm-sender-async</artifactId>
+                            <version>0.1.5</version>
+                            <packaging>jar</packaging>
+                            <file>${project.basedir}/src/main/resources/gcm-sender-async-0.1.5.jar</file>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>gcm-server-repository</id>
-            <url>https://raw.github.com/whispersystems/maven/master/gcm-server/releases/</url>
-        </repository>
-    </repositories>
 
 </project>
